Añadida funcionalidad para ordenar

--- a/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
+++ b/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
@@ -74,8 +74,8 @@
                             <input type="hidden" name="path" id="path" value="{{path('paginate_result')}}" size="10">
 
                             {# Path to ajax call, hidden input to locate via javascript #}
-                            <input type="text" name="orderField" id="orderField" value="{{ orderField }}" size="10">
-                            <input type="text" name="order" id="order" value="{{ order }}" size="10">
+                            <input type="hidden" name="orderField" id="orderField" value="{{ orderField }}" size="10">
+                            <input type="hidden" name="order" id="order" value="{{ order }}" size="10">
                         </form>
                     </div>
 
