--- a/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
+++ b/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
@@ -21,36 +21,30 @@
 
     </script>
 
-    <div class="container-fluid">
-        <div class="row-fluid">
-
-            <div class="span2">
-                <div class="row-fluid">&nbsp;</div>
-                <div class="row-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="span4">
                     {# Calendar #}
                     <div id="datepicker"></div>
-                </div>
-
-
-
             </div>
 
-            <div class="span10">
-                <div class="row-fluid">
-                    <div class="span9 text-center">
-                        <h3>
-                            {% if selectedCountry == 0 %}
-                                Global
-                            {% else %}
-                                {{ countries[selectedCountry - 1] }}
-                            {% endif %}
-                            Sales <span id="dates"> {{ startDate | date('d/m/Y') }} - {{ endDate | date('d/m/Y') }}</span>
-                        </h3>
-                    </div>
+            <div class="span8 top_buffer">
+                {# Label indicates date range and general/country search #}
+                <div class="row  text-center">
+                    <h3>
+                        {% if selectedCountry == 0 %}
+                            Global
+                        {% else %}
+                            {{ countries[selectedCountry - 1] }}
+                        {% endif %}
+                        Sales <span id="dates"> {{ startDate | date('d/m/Y') }} - {{ endDate | date('d/m/Y') }}</span>
+                    </h3>
                 </div>
+                {# END Label indicates date range and general/country search #}
 
-                <div class="row-fluid">
-                    <div class="span6">
+                {# Country selector and table size/direct navigation #}
+                <div class="row">
+                    <div class="span3">
                         <form name="countryForm" action="{{ path('product_list') }}" method="post">
                             <select class="selectpicker" id="countrySelect" name="idCountry"
                                     onchange="this.form.submit()">
@@ -79,8 +73,7 @@
                         </form>
                     </div>
 
-
-                    <div class="span2">
+                    <div class="span3 form-horizontal">
                         <span class="label label-info">Records per page</span>
                         <select class="select_record_size" id="numRecorsSelect" name="numRows"
                                 onchange="resizeList()">
@@ -90,71 +83,14 @@
                         </select>
                     </div>
 
-                            <span class="span1">
-                                <input type="text" id="selectPage" style="width: 30px;" maxlength="3"/>
-                                <input type="button" id="selectPageBtn" value="Go" class="btn btn-info" onclick="moveToPage()"/>
-                            </span>
+                    <span class="span2 form-horizontal">
+                        <input type="text" id="selectPage" style="width: 30px;" maxlength="3"/>
+                        <input type="button" id="selectPageBtn" value="Go" class="btn btn-info" onclick="moveToPage()"/>
+                    </span>
                 </div>
+                {# END Country selector and table size/direct navigation #}
 
-                <div class="row-fluid">
-                    <div class="span9">
-                        <table id="productListTable" class="table table-striped">
-
-                            <tr class="info">
-                                <th onclick="sort('product')">Product</th>
-                                <th onclick="sort('units')">Units sold</th>
-                                <th>Total Cost</th>
-                                <th>Total Revenue</th>
-                                <th>Total Profit</th>
-                            </tr>
-
-                            {% for buy in buys %}
-                                <tr>
-                                    <td> {{buy.product}} </td>
-                                    <td> {{buy.units}} </td>
-                                    <td> {{buy.units * buy.cost}}</td>
-                                    <td> {{buy.units * buy.price}}</td>
-
-                                    {# Text color red for negative balance#}
-                                    {% set profit = (buy.units * buy.price) - (buy.units * buy.cost) %}
-                                    <td {% if profit < 0 %} class="negative_profit" {% endif %}>
-                                        {{ (buy.units * buy.price) - (buy.units * buy.cost)}}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-
-                        </table>
-
-                        {# Pagination #}
-                        <div id="paginator" class="pagination pagination-small pagination-centered" >
-                            <ul>
-                                <li class="disabled"><a>&laquo;</a></li>
-                                <li class="disabled"><a>&lt;</a></li>
-                                <li class="active"><a>1</a></li>
-
-                                {% if (gridPaginationData.totalPages > 1) %}
-                                    {% if (gridPaginationData.totalPages <= 6) %}
-                                        {% for i in 2..gridPaginationData.totalPages %}
-                                            <li class="inactive"><a onclick="gotoPage({{ i }})">{{ i }}</a></li>
-                                        {% endfor %}
-                                    {% else %}
-                                        {% for i in 2..6 %}
-                                            <li class="inactive"><a onclick="gotoPage({{ i }})">{{ i }}</a></li>
-                                        {% endfor %}
-                                        <li class="disabled"><a>...</a></li>
-                                    {% endif %}
-                                {% endif %}
-
-                                <li class="inactive"><a onclick="gotoPage({{ gridPaginationData.currentPage + 1 }})">&gt;</a></li>
-
-                                <li class="inactive"><a onclick="gotoPage({{ gridPaginationData.totalPages }})">&raquo;</a></li>
-                            </ul>
-                        </div>
-                        {# End Pagination #}
-                    </div>
-                </div>
-
-                <div class="row-fluid">
+                <div class="row">
                             <span class="span1">
                                 <input type="hidden" id="totalPagesHidden" value=" {{ gridPaginationData.totalPages }}"/>
 
@@ -167,9 +103,68 @@
                                 </span>
                             </span>
                 </div>
-
             </div>
         </div>
+
+
+        <div class="row top_buffer">
+            <div class="span12">
+                <table id="productListTable" class="table table-striped">
+
+                    <tr class="info">
+                        <th onclick="sort('product')" class="span4">Product</th>
+                        <th onclick="sort('units')" class="span2 text-center">Units sold</th>
+                        <th class="span2 text-center">Total Cost</th>
+                        <th class="span2 text-center">Total Revenue</th>
+                        <th class="span2 text-center">Total Profit</th>
+                    </tr>
+
+                    {% for buy in buys %}
+                        <tr>
+                            <td> {{buy.product}} </td>
+                            <td> {{buy.units}} </td>
+                            <td> {{buy.units * buy.cost}}</td>
+                            <td> {{buy.units * buy.price}}</td>
+
+                            {# Text color red for negative balance#}
+                            {% set profit = (buy.units * buy.price) - (buy.units * buy.cost) %}
+                            <td {% if profit < 0 %} class="negative_profit" {% endif %}>
+                                {{ (buy.units * buy.price) - (buy.units * buy.cost)}}
+                            </td>
+                        </tr>
+                    {% endfor %}
+
+                </table>
+
+                {# Pagination #}
+                <div id="paginator" class="pagination pagination-small pagination-centered" >
+                    <ul>
+                        <li class="disabled"><a>&laquo;</a></li>
+                        <li class="disabled"><a>&lt;</a></li>
+                        <li class="active"><a>1</a></li>
+
+                        {% if (gridPaginationData.totalPages > 1) %}
+                            {% if (gridPaginationData.totalPages <= 6) %}
+                                {% for i in 2..gridPaginationData.totalPages %}
+                                    <li class="inactive"><a onclick="gotoPage({{ i }})">{{ i }}</a></li>
+                                {% endfor %}
+                            {% else %}
+                                {% for i in 2..6 %}
+                                    <li class="inactive"><a onclick="gotoPage({{ i }})">{{ i }}</a></li>
+                                {% endfor %}
+                                <li class="disabled"><a>...</a></li>
+                            {% endif %}
+                        {% endif %}
+
+                        <li class="inactive"><a onclick="gotoPage({{ gridPaginationData.currentPage + 1 }})">&gt;</a></li>
+
+                        <li class="inactive"><a onclick="gotoPage({{ gridPaginationData.totalPages }})">&raquo;</a></li>
+                    </ul>
+                </div>
+                {# End Pagination #}
+            </div>
+        </div>
+
     </div>
 {% endblock %}
 
