Eliminado controller y unificada funcionalidad en un único controller

--- a/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
+++ b/src/TSP/ChallengeBundle/Resources/views/Default/productList.html.twig
@@ -65,7 +65,7 @@
                             <input type="hidden" name="endDate" id="endDate" value="{{ endDate | date('m/d/Y') }}" size="10">
 
                             {# Path to ajax call, hidden input to locate via javascript #}
-                            <input type="hidden" name="path" id="path" value="{{path('paginate_result')}}" size="10">
+                            <input type="hidden" name="path" id="path" value="{{path('product_list')}}" size="10">
 
                             {# Path to ajax call, hidden input to locate via javascript #}
                             <input type="hidden" name="orderField" id="orderField" value="{{ orderField }}" size="10">
